--- a/TipCalculatorAppDemo/Base.lproj/Main.storyboard
+++ b/TipCalculatorAppDemo/Base.lproj/Main.storyboard
@@ -69,9 +69,9 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xz9-hl-Guw">
                                 <rect key="frame" x="20" y="261" width="109" height="60"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tip %" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f9h-zL-N3M">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tip" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f9h-zL-N3M">
                                         <rect key="frame" x="8" y="20" width="93" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -108,7 +108,7 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Split" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4PX-B3-ekh">
                                         <rect key="frame" x="8" y="20" width="93" height="26"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -236,12 +236,14 @@
                     <connections>
                         <outlet property="afterTaxesAmountLabel" destination="2eP-Bo-0LS" id="bLw-gs-mtf"/>
                         <outlet property="beforeTaxesAmountField" destination="pga-gX-Dgh" id="6J5-AJ-DQ6"/>
+                        <outlet property="perPersonContainterTitleLabel" destination="89z-W8-raf" id="QAr-S5-1pe"/>
                         <outlet property="perPersonLabel" destination="wnf-VG-jXM" id="3WT-dt-TYf"/>
                         <outlet property="perPersonView" destination="Rqc-J0-zBa" id="rFw-pO-bnH"/>
                         <outlet property="splitBetweenLabel" destination="4PX-B3-ekh" id="uUH-kw-emy"/>
                         <outlet property="splitBetweenSlider" destination="7ZI-dH-xIP" id="lM7-MY-nKx"/>
                         <outlet property="tipPercentageLabel" destination="f9h-zL-N3M" id="NbL-lN-XeQ"/>
                         <outlet property="tipPercentageSlider" destination="oGX-VR-qZp" id="Z5K-Sv-Nfe"/>
+                        <outlet property="totalAmountContainterTitleLabel" destination="VkI-Cv-bfc" id="0Fj-QK-Dwl"/>
                         <outlet property="totalAmountView" destination="MnX-W5-Z3E" id="SZA-Ec-4wt"/>
                     </connections>
                 </viewController>
